# hydrobricks

./: .clang-format  .clangd  .cmake-format.yaml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  __init__.py  codecov.yml  conanfile.py  conanfile.txt  pyproject.toml  setup.py  vcpkg.json
core/bindings/: Binding.cpp  CMakeLists.txt  ParameterBinding.cpp
core/src/: CMakeLists.txt
core/src/actions/: Action.cpp  Action.h  ActionGlacierEvolutionAreaScaling.cpp  ActionGlacierEvolutionAreaScaling.h  ActionGlacierEvolutionDeltaH.cpp  ActionGlacierEvolutionDeltaH.h  ActionGlacierSnowToIceTransformation.cpp  ActionsManager.cpp  (+6 more)
core/tests/: CMakeLists.txt  gcovr
python/: CHANGELOG.md  README.md  __init__.py  optional-requirements.txt  pyproject.toml  pywrap_hydrobricks.py  requirements-optional.txt  requirements.txt
python/examples/: analyse_mc2_socont_sitter.py  analyse_mc_socont_sitter.py  calibrate_sceua_socont_sitter.py  create_evapotranspiration_netcdf.py  getting_started.py  monte_carlo_socont_sitter.py  plot_netcdf.py  prepare_catchment_data_elevation_aspect.py  prepare_catchment_data_elevation_bands.py  prepare_forcing_from_gridded_data.py  simple_socont_sitter.py  socont_monte_carlo_sitter.py  spatialize_continuous_input_netcdf.py  spotpy_socont_sitter.py
python/tests/: test_basics.py  test_binding.py  test_caching.py  test_calibration.py  test_catchment.py  test_cli.py  test_custom_model.py  test_discharge_transform.py  test_et_processes.py  test_forcing.py  test_glacier_evolution.py  test_glacier_mass_balance.py  test_glacier_module.py  test_glaciers.py  test_gr4j.py  test_gr6j.py  test_hbv.py  test_hydro_units.py  test_land_cover_change.py  test_land_cover_extraction.py  test_metric_kge_np.py  test_models.py  test_objective_normalization.py  test_parameters.py  test_periods.py  test_preprocessing_catchment.py  test_prevah.py  test_project.py  test_snow_cover.py  test_structure.py  test_study.py  test_sublimation.py
src/: CMakeLists.txt
src/app/: CmdLineDesc.h  Hydrobricks.cpp  Hydrobricks.h
src/base/: Enums.h  FileNetcdf.h  Forcing.cpp  Forcing.h  ForcingFluxConnector.cpp  ForcingFluxConnector.h  GlobVars.cpp  GlobVars.h  Includes.h  Logger.cpp  Logger.h  ModelHydro.cpp  ModelHydro.h  Parameter.cpp  Parameter.h  ParameterSet.cpp  ParameterSet.h  ParameterVariable.cpp  ParameterVariable.h  ParametersUpdater.cpp  ParametersUpdater.h  Processor.cpp  Processor.h  SettingsBasin.cpp  SettingsBasin.h  SettingsModel.cpp  SettingsModel.h  Solver.cpp  Solver.h  SolverEulerExplicit.cpp  SolverEulerExplicit.h  SolverExplicitEuler.cpp  SolverExplicitEuler.h  SolverExplicitHeun.cpp  SolverExplicitHeun.h  SolverHeunExplicit.cpp  SolverRK4.cpp  SolverRK4.h  SolverRungeKuttaMethod.cpp  SolverRungeKuttaMethod.h  (+17 more)
src/behaviours/: Behaviour.h  BehaviourGlacierExtent.h  BehaviourSnowRedistribution.cpp  BehaviourSnowRedistribution.h  BehaviourSurfaceChange.cpp  BehaviourSurfaceChange.h
src/bricks/: Brick.cpp  Brick.h  GenericSurface.cpp  GenericSurface.h  Glacier.cpp  Glacier.h  Snowpack.cpp  Snowpack.h  Storage.cpp  Storage.h  Surface.cpp  Surface.h  SurfaceComponent.cpp  SurfaceComponent.h  SurfaceContainer.cpp  SurfaceContainer.h  Urban.cpp  Urban.h  Vegetation.cpp  Vegetation.h  WaterContainer.cpp  WaterContainer.h
src/components/: Brick.cpp  Brick.h  Container.cpp  Container.h  Flux.cpp  Flux.h  FluxConnector.cpp  FluxConnector.h  FluxConnectorBrickToBrick.cpp  FluxConnectorBrickToBrick.h  FluxConnectorForcingToBrick.cpp  FluxConnectorForcingToBrick.h  FluxDirect.cpp  FluxDirect.h  FluxForcing.cpp  FluxForcing.h  FluxLateral.h  FluxToBrick.cpp  FluxToOutlet.cpp  FluxToOutlet.h  FluxVertical.cpp  FluxVertical.h  Glacier.cpp  Glacier.h  Modifier.cpp  Modifier.h  ModifierLag.cpp  ModifierLag.h  Snowpack.cpp  Snowpack.h  Storage.cpp  Storage.h  StorageLinear.cpp  StorageLinear.h  Surface.cpp  Surface.h
src/fluxes/: Flux.cpp  Flux.h  FluxForcing.h  FluxSimple.cpp  FluxSimple.h  FluxToAtmosphere.cpp  FluxToBrick.h  FluxToBrickInstantaneous.cpp  FluxToBrickInstantaneous.h  ModifierLag.cpp  Splitter.cpp  Splitter.h  SplitterMultiFluxes.cpp  SplitterMultiFluxes.h  SplitterRain.cpp  SplitterRain.h  SplitterSnowRain.cpp  SplitterSnowRain.h
src/processes/: Behaviour.cpp  Behaviour.h  BehaviourGlacierExtent.cpp  BehaviourGlacierExtent.h  BehaviourSnowRedistribution.cpp  BehaviourSnowRedistribution.h  Process.cpp  Process.h  ProcessET.cpp  ProcessET.h  ProcessETSocont.cpp  ProcessETSocont.h  ProcessInfiltration.cpp  ProcessInfiltration.h  ProcessInfiltrationSocont.cpp  ProcessInfiltrationSocont.h  ProcessMelt.cpp  ProcessMelt.h  ProcessMeltDegreeDay.cpp  ProcessMeltDegreeDay.h  ProcessOutflow.cpp  ProcessOutflow.h  ProcessOutflowConstant.cpp  ProcessOutflowConstant.h  ProcessOutflowDirect.cpp  ProcessOutflowDirect.h  ProcessOutflowLinear.cpp  ProcessOutflowLinear.h  ProcessOutflowOverflow.cpp  ProcessOutflowOverflow.h  ProcessOutflowRestDirect.cpp  ProcessOutflowRestDirect.h  ProcessRunoffSocont.cpp  ProcessRunoffSocont.h
src/spatial/: Connector.cpp  Connector.h  HydroUnit.cpp  HydroUnit.h  HydroUnitForcing.cpp  HydroUnitForcing.h  HydroUnitProperty.cpp  HydroUnitProperty.h  SubBasin.cpp  SubBasin.h  SubCatchment.cpp  SubCatchment.h
tests/: CMakeLists.txt
tests/files/: hydro-units-2-glaciers.nc  socont-2-stores-model.json  socont-2-stores-model.yaml  socont-2-stores-parameters-detailed.yaml  socont-2-stores-parameters.json  socont-2-stores-parameters.yaml  time-series-data.nc
tests/resources/: annual_insolation.py  glacier snowpack.xlsx  resample_netcdf.py
tests/src/: FluxesTest.cpp  HydroUnitTest.cpp  ModelBasicsTest.cpp  ModelHydroTest.cpp  ParametersTest.cpp  ProcessMeltTest.cpp  SettingsBasinTest.cpp  SettingsModelTest.cpp  SolverTest.cpp  SplittersTest.cpp  StoragesTest.cpp  SubBasinTest.cpp  SubCatchmentTest.cpp  SurfaceContainerTest.cpp  TimeMachineTest.cpp  TimeSeriesTest.cpp  UtilitiesTest.cpp  UtilsTest.cpp  helpers.cpp  helpers.h  main.cpp
(+596 files in other folders)
