[project]
name = "hydrobricks"
version = "0.9.0"
authors = [
    { name = "Pascal Horton et al.", email = "pascal.horton@unibe.ch" }
]
maintainers = [
    { name = "Pascal Horton" },
    { name = "Anne-Laure Argentin" }
]
description = "A modular hydrological modelling framework"
readme = "python/README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "cftime",
    "numpy<2.4",
    "HydroErr",
    "pandas",
    "pyyaml",
    "StrEnum; python_version < '3.11'"
]

[project.optional-dependencies]
all = [
    "dask",
    "datashader==0.19.1",
    "geopandas",
    "graphviz",
    "h5netcdf",
    "matplotlib",
    "netCDF4",
    "pathos",
    "pyarrow",
    "pyet",
    "pyproj",
    "pysheds",
    "rasterio",
    "rioxarray",
    "scipy",
    "shapely",
    "spotpy",
    "xarray",
    "xarray-spatial"
]
test = [
    "hydrobricks[all]",
    "pytest>=6.0"
]
dev = [
    "hydrobricks[all]",
    "pre-commit>=3.4.0"
]

[project.scripts]
hydrobricks = "hydrobricks.cli:main"

[project.urls]
"Source Code" = "https://github.com/hydrobricks/hydrobricks"
"Bug Tracker" = "https://github.com/hydrobricks/hydrobricks/issues"

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.packages.find]
where = ["python/src"]
include = ["hydrobricks*"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["hydrobricks", "hydrobricks.*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",  # Treat all warnings as errors
    "ignore:The 'shapely.geos' module is deprecated:DeprecationWarning",
    "ignore:The distutils package is deprecated:DeprecationWarning",
    "ignore:angle from rectified to skew grid parameter lost in conversion to CF:UserWarning"
]
testpaths = ["python/tests"]

[tool.codespell]
ignore-words-list = "crate, mape, ned, PADDS"

[tool.cibuildwheel]
test-command = "pytest {project}/python/tests"
test-extras = "test"
archs = ["auto64"]
skip = ["*musllinux*", "cp38*", "cp39*", "cp314t*"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"
environment = {VCPKG_LIBRARY_LINKAGE="static"}
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = [ # Independent of Python version
    # Install system dependencies
    "yum install -y epel-release",
    "yum install -y perl perl-core perl-IPC-Cmd perl-Digest-SHA hdf5-devel",
    # Install vcpkg
    "git clone https://github.com/microsoft/vcpkg.git",
    "cd vcpkg",
    "./bootstrap-vcpkg.sh",
    "export VCPKG_ROOT=$PWD",
    "export PATH=$VCPKG_ROOT:$PATH",
    "cd ..",
    # Install vcpkg dependencies
    "export VCPKG_LIBRARY_LINKAGE=static",
    "vcpkg install",
]
before-build = [ # Depends on Python version
    "pip install cmake",
]

[tool.cibuildwheel.windows]
before-all = [ # Independent of Python version
    # Install vcpkg
    "git clone https://github.com/microsoft/vcpkg.git",
    "cd vcpkg",
    ".\\bootstrap-vcpkg.bat",
    "set VCPKG_ROOT=%cd%",
    "set PATH=%VCPKG_ROOT%;%PATH%",
    "cd ..",
    # Install vcpkg dependencies
    "set VCPKG_LIBRARY_LINKAGE=static",
    "vcpkg install",
]
before-build = [ # Depends on Python version
    "pip install cmake",
]
repair-wheel-command = "cp {wheel} {dest_dir}/"

[tool.cibuildwheel.macos]
before-all = [ # Independent of Python version
    # Install system dependencies
    "brew install hdf5",
    # Install vcpkg
    "git clone https://github.com/microsoft/vcpkg.git",
    "cd vcpkg",
    "./bootstrap-vcpkg.sh",
    "export VCPKG_ROOT=$PWD",
    "export PATH=$VCPKG_ROOT:$PATH",
    "cd ..",
    # Install vcpkg dependencies
    "export VCPKG_LIBRARY_LINKAGE=static",
    "vcpkg install",
]
before-build = [  # Depends on Python version
    "pip install cmake",
]
