[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrobricks"
version = "0.0.1"
authors = [
    { name = "Pascal Horton", email = "pascal.horton@giub.unibe.ch" },
]
description = "A modular hydrological modelling framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "netCDF4",
    "yaml",
    "numpy",
    "pandas",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/hydrobricks/hydrobricks"
"Bug Tracker" = "https://github.com/hydrobricks/hydrobricks/issues"